; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_patch.c_patch_set_media_source_prop.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_patch.c_patch_set_media_source_prop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32 }
%struct.TYPE_11__ = type { i32 }
%struct.TYPE_10__ = type { i32 }

@patch_set_media_source_prop.query = internal constant [56 x i8] c"SELECT `Source` FROM `Media` WHERE `Source` IS NOT NULL\00", align 16
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@szPatch = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_12__*)* @patch_set_media_source_prop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @patch_set_media_source_prop(%struct.TYPE_12__* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_12__*, align 8
  %4 = alloca %struct.TYPE_11__*, align 8
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %3, align 8
  %9 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @MSI_DatabaseOpenViewW(i32 %11, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @patch_set_media_source_prop.query, i64 0, i64 0), %struct.TYPE_11__** %4)
  store i64 %12, i64* %8, align 8
  %13 = load i64, i64* %8, align 8
  %14 = load i64, i64* @ERROR_SUCCESS, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %1
  %17 = load i64, i64* %8, align 8
  store i64 %17, i64* %2, align 8
  br label %55

18:                                               ; preds = %1
  %19 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %20 = call i64 @MSI_ViewExecute(%struct.TYPE_11__* %19, i32 0)
  store i64 %20, i64* %8, align 8
  %21 = load i64, i64* %8, align 8
  %22 = load i64, i64* @ERROR_SUCCESS, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %18
  br label %50

25:                                               ; preds = %18
  %26 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %27 = call i64 @MSI_ViewFetch(%struct.TYPE_11__* %26, %struct.TYPE_10__** %5)
  %28 = load i64, i64* @ERROR_SUCCESS, align 8
  %29 = icmp eq i64 %27, %28
  br i1 %29, label %30, label %49

30:                                               ; preds = %25
  %31 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %32 = call i8* @MSI_RecordGetString(%struct.TYPE_10__* %31, i32 1)
  store i8* %32, i8** %6, align 8
  %33 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* @szPatch, align 4
  %37 = call i8* @msi_dup_property(i32 %35, i32 %36)
  store i8* %37, i8** %7, align 8
  %38 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %39 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = load i8*, i8** %6, align 8
  %42 = load i8*, i8** %7, align 8
  %43 = call i32 @msi_set_property(i32 %40, i8* %41, i8* %42, i32 -1)
  %44 = load i8*, i8** %7, align 8
  %45 = call i32 @msi_free(i8* %44)
  %46 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %47 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %46, i32 0, i32 0
  %48 = call i32 @msiobj_release(i32* %47)
  br label %49

49:                                               ; preds = %30, %25
  br label %50

50:                                               ; preds = %49, %24
  %51 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %52 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %51, i32 0, i32 0
  %53 = call i32 @msiobj_release(i32* %52)
  %54 = load i64, i64* %8, align 8
  store i64 %54, i64* %2, align 8
  br label %55

55:                                               ; preds = %50, %16
  %56 = load i64, i64* %2, align 8
  ret i64 %56
}

declare dso_local i64 @MSI_DatabaseOpenViewW(i32, i8*, %struct.TYPE_11__**) #1

declare dso_local i64 @MSI_ViewExecute(%struct.TYPE_11__*, i32) #1

declare dso_local i64 @MSI_ViewFetch(%struct.TYPE_11__*, %struct.TYPE_10__**) #1

declare dso_local i8* @MSI_RecordGetString(%struct.TYPE_10__*, i32) #1

declare dso_local i8* @msi_dup_property(i32, i32) #1

declare dso_local i32 @msi_set_property(i32, i8*, i8*, i32) #1

declare dso_local i32 @msi_free(i8*) #1

declare dso_local i32 @msiobj_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
